--- a/src/app/pages/school/configuration/school/school.component.html
+++ b/src/app/pages/school/configuration/school/school.component.html
@@ -1,1 +1,142 @@
-<p>school works!</p>
+<app-breadcrumbs title="School" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+<div class="position-relative mx-n4 mt-n4">
+    <div class="profile-wid-bg profile-setting-img">
+        <img src="assets/images/toghu.jpg" class="profile-wid-img" alt="">
+        <div class="overlay-content">
+            <div class="text-end p-3">
+                <div class="p-0 ms-auto rounded-circle profile-photo-edit">
+                    <input id="profile-foreground-img-file-input" type="file" class="profile-foreground-img-file-input">
+                    <label for="profile-foreground-img-file-input" class="profile-photo-edit btn btn-light">
+                        <i class="ri-image-edit-line align-bottom me-1"></i> Change Cover
+                    </label>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xxl-3">
+        <div class="card mt-n5">
+            <div class="card-body p-4">
+                <div class="text-center">
+                    <div class="profile-user position-relative d-inline-block mx-auto  mb-4">
+                        <img src="assets/images/upload.jpg" class="rounded-circle avatar-xl img-thumbnail user-profile-image material-shadow" alt="school-logo">
+                        <div class="avatar-xs p-0 rounded-circle profile-photo-edit">
+                            <input id="profile-img-file-input" type="file" class="profile-img-file-input">
+                            <label for="profile-img-file-input" class="profile-photo-edit avatar-xs">
+                                <span class="avatar-title rounded-circle bg-light text-body material-shadow">
+                                    <i class="ri-camera-fill"></i>
+                                </span>
+                            </label>
+                        </div>
+                    </div>
+                    <!-- <h5 class="fs-16 mb-1">{{school.name}}</h5> -->
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex align-items-center mb-5">
+                    <div class="flex-grow-1">
+                        <h5 class="card-title mb-0">Configuration</h5>
+                    </div>
+                    <div class="flex-shrink-0">
+                        <a href="javascript:void(0);" class="badge bg-light text-primary fs-12"><i class=" ri-question-line align-bottom me-1"></i></a>
+                    </div>
+                </div>
+                <div class="progress animated-progess custom-progress progress-label">
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 1%" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100">
+                        <div class="label">1%</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xxl-9">
+        <div class="card mt-xxl-n5">
+            <div class="card-header">
+                <ul ngbNav #customNav="ngbNav" [activeId]="1" class="nav nav-tabs-custom rounded card-header-tabs border-bottom-0" role="tablist">
+                    <li [ngbNavItem]="1" class="nav-item">
+                        <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab"><i class="ri-contacts-book-2-line"></i> School Details</a>
+                        <ng-template ngbNavContent>
+                            <form [formGroup]="schoolForm">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div class="mb-3">
+                                            <label for="name" class="form-label">Name <span class="text-danger">*</span></label>
+                                            <input type="text" class="form-control" id="name" placeholder="Enter School Name" required formControlName="name" [ngClass]="{ 'is-invalid': submitted && fSchool['name'].errors }">
+                                            <div class="invalid-feedback" *ngIf="submitted && fSchool['name'].errors?.['required']">Please Enter School Name</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-3">
+                                            <label for="phone" class="form-label">Phone <span class="text-danger">*</span></label>
+                                            <input type="text" class="form-control" id="phone" placeholder="Enter Phone Number" formControlName="phone" required [ngClass]="{ 'is-invalid': submitted && fSchool['phone'].errors }">
+                                            <div class="invalid-feedback">Please Enter Phone Number</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-3">
+                                            <label for="email" class="form-label">Email</label>
+                                            <input type="text" class="form-control" id="email" placeholder="Enter Email Address" formControlName="email">
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </ng-template>
+                    </li>
+                    <li [ngbNavItem]="3" class="nav-item">
+                        <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab"><i class="ri-mail-line"></i> Address</a>
+                        <ng-template ngbNavContent>
+                            <form [formGroup]="addressForm">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="mb-3">
+                                            <label class="form-label">Country</label>
+                                            <ng-select [items]="countries" bindLabel="name" id="country" bindValue="id" formControlName="countryId" placeholder="Select a country"></ng-select>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-3">
+                                            <label for="addressLine1" class="form-label">Address Line 1</label>
+                                            <input type="text" class="form-control" id="addressLine1" placeholder="Enter Address Line 1" formControlName="addressLine1">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-3">
+                                            <label for="addressLine2" class="form-label">Address Line 2</label>
+                                            <input type="text" class="form-control" id="addressLine2" placeholder="Enter Address Line 2" formControlName="addressLine2">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-3">
+                                            <label for="postalCode" class="form-label">Postal Code</label>
+                                            <input type="text" class="form-control" id="postalCode" placeholder="Enter Postal Code" formControlName="postalCode">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="newForm" style="display: none;"></div>
+                            </form>
+                        </ng-template>
+                    </li>
+                </ul>
+            </div>
+            <div class="card-body p-4">
+                <div class="tab-content">
+                    <div [ngbNavOutlet]="customNav"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-body col-lg-12">
+                <div class="hstack gap-2 justify-content-end">
+                    <button type="submit" class="btn btn-primary" (click)="onSubmit()">Save</button>
+                    <button type="button" class="btn btn-soft-warning">Cancel</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
