--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -6,61 +6,48 @@
                 <div class="row g-4 align-items-center">
                     <div class="col-sm">
                         <div>
-                            <h5 class="card-title mb-0"><i class="ri-pencil-ruler-line text-muted fs-18 align-middle me-1"> </i>Register Results</h5>
+                            <h5 class="card-title mb-0"><i
+                                    class="ri-pencil-ruler-line text-muted fs-18 align-middle me-1"> </i>Register
+                                Results</h5>
                         </div>
                     </div>
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
-                            <button type="button" class="btn btn-success"
-                                (click)="openModal(importResultsContent)"><i
+                            <button type="button" class="btn btn-success" (click)="openModal(importResultsContent)"><i
                                     class="ri-file-excel-2-line align-bottom me-1"></i> Import</button>
-                            <button type="button" class="btn btn-secondary"
-                                (click)="openModal(scaleContent)"><i
+                            <button type="button" class="btn btn-secondary" (click)="openModal(scaleContent)"><i
                                     class="ri-scales-line align-bottom me-1"></i> Grading Scale</button>
-                            <button type="button" class="btn btn-primary"
-                                (click)="openModal(importResultsContent)"><i
+                            <button type="button" class="btn btn-info" (click)="saveResults()"><i
                                     class="ri-save-2-line align-bottom me-1"></i> Save Results</button>
                         </div>
                     </div>
-                    <div class="col-xl-12">
-                        <div ngbAccordion activeIds="static-1" [closeOthers]="true">
-                            <div ngbAccordionItem class="material-shadow" id="static-1">
-                                <div ngbAccordionHeader class="accordion-header border-0 bg-transparent">
-                                    <button ngbAccordionButton>Filters</button>
-                                </div>
-                                <div ngbAccordionCollapse>
-                                    <div ngbAccordionBody>
-                                        <form class="tablelist-form" autocomplete="off" [formGroup]="getStudentForm"
-                                            (ngSubmit)="getStudents()">
-                                            <div class="row g-3">
-                                                <div class="col-sm-3">
-                                                    <label class="form-label">Select Class</label>
-                                                    <ng-select [items]="teacherClasses" formControlName="classId"
-                                                        bindLabel="name" bindValue="id"
-                                                        placeholder="Select Class"></ng-select>
-                                                </div>
-                                                <div class="col-sm-3">
-                                                    <label class="form-label">Select Section</label>
-                                                    <ng-select [items]="teacherSections"
-                                                        formControlName="classSectionId" bindLabel="name" bindValue="id"
-                                                        placeholder="Select Section"></ng-select>
-                                                </div>
-                                                <div class="col-sm-3">
-                                                    <label class="form-label">Select Subject</label>
-                                                    <ng-select [items]="teacherSubjects" formControlName="subjectId"
-                                                        bindLabel="name" bindValue="id"
-                                                        placeholder="Select subject"></ng-select>
-                                                </div>
-                                                <div class="col-sm-3">
-                                                    <label class="form-label">&nbsp;</label>
-                                                    <button type="button" class="btn btn-primary w-100" type="submit"><i
-                                                            class="ri-equalizer-fill mx-2 align-bottom"></i>Filter</button>
-                                                </div>
-                                            </div>
-                                        </form>
+                    <div class="col-xl-12 ">
+                        <div class="card-body">
+                            <form class="tablelist-form" autocomplete="off" [formGroup]="getStudentForm"
+                                (ngSubmit)="getStudents()">
+                                <div class="row g-3">
+                                    <div class="col-xxl-2 col-lg-4">
+                                        <ng-select [items]="teacherClasses" formControlName="classId" bindLabel="name"
+                                            bindValue="id" placeholder="Select Class"></ng-select>
+                                    </div>
+                                    <div class="col-xxl-2 col-lg-4">
+                                        <ng-select [items]="teacherSections" formControlName="classSectionId"
+                                            bindLabel="name" bindValue="id" placeholder="Select Section"></ng-select>
+                                    </div>
+                                    <div class="col-xxl-4 col-lg-6">
+                                        <ng-select [items]="teacherSubjects" formControlName="subjectId"
+                                            bindLabel="name" bindValue="id" placeholder="Select subject"></ng-select>
+                                    </div>
+                                    <div class="col-xxl-3 col-lg-6">
+                                        <ng-select [items]="examTypes" formControlName="examTypeId" bindLabel="name"
+                                            bindValue="examTypeId" placeholder="Select exam type"></ng-select>
+                                    </div>
+                                    <div class="col-xxl-1 col-lg-4">
+                                        <button type="button" class="btn btn-primary w-100" type="submit"><i
+                                                class="ri-equalizer-fill mx-2"></i>Load</button>
                                     </div>
                                 </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -84,9 +71,9 @@
                     (click)="dismissModal()"></button>
             </div>
             <form class="tablelist-form" autocomplete="off" autocomplete="off">
-            <div class="modal-body">
-                
-            </div>
+                <div class="modal-body">
+
+                </div>
             </form>
 
             <div class="modal-footer">
@@ -106,15 +93,18 @@
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="scale" class="form-label">Scale</label>
-                        <input disabled="true" type="text" class="form-control" id="scale" placeholder="Enter Scale" [(ngModel)]="scale"name="scale" required>
+                        <input disabled="true" type="text" class="form-control" id="scale" placeholder="Enter Scale"
+                            [(ngModel)]="scale" name="scale" required>
                     </div>
                 </div>
             </form>
 
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" disabled="true"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-arrow-go-back-line align-bottom me-1"></i> Cancel</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" disabled="true"><i
+                            class="ri-save-2-line align-bottom me-1"></i> Save</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i
+                            class="ri-arrow-go-back-line align-bottom me-1"></i> Cancel</button>
                 </div>
             </div>
         </ng-template>
