--- a/src/app/pages/school/configuration/academics/rollover/rollover.component.html
+++ b/src/app/pages/school/configuration/academics/rollover/rollover.component.html
@@ -9,7 +9,7 @@
                     </div>
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
-                            <button type="button" class="btn btn-warning" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="openModal(content)"><i class="ri-refresh-line align-bottom me-1"></i> Academic Year Rollover</button>
+                            <button type="button" class="btn btn-warning" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="openModal(content)"><i class="ri-refresh-line align-bottom me-1"></i> Create Rollover</button>
                         </div>
                     </div>
                     <div class="col-sm-auto">
@@ -34,12 +34,12 @@
             <div class="row g-3">
                 <div class="col-lg-6">
                     <label class="form-label">Source Academic Year<span class="text-danger">*</span></label>
-                    <ng-select [items]="activeAcademicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="sourceAcademicYearId" placeholder="Select Source Academic Year" [ngClass]="{ 'is-invalid': submitted && form.controls['sourceAcademicYearId'].invalid }"></ng-select>
+                    <ng-select [items]="inActiveAcademicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="sourceAcademicYearId" placeholder="Select Source Academic Year" [ngClass]="{ 'is-invalid': submitted && form.controls['sourceAcademicYearId'].invalid }"></ng-select>
                     <div class="invalid-feedback">Please select an academic year from</div>
                 </div>
                  <div class="col-lg-6">
                     <label class="form-label">Destination Academic Year<span class="text-danger">*</span></label>
-                    <ng-select [items]="inActiveAcademicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="destinationAcademicYearId" placeholder="Select Destination Academic Year" [ngClass]="{ 'is-invalid': submitted && form.controls['destinationAcademicYearId'].invalid }"></ng-select>
+                    <ng-select [items]="activeAcademicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="destinationAcademicYearId" placeholder="Select Destination Academic Year" [ngClass]="{ 'is-invalid': submitted && form.controls['destinationAcademicYearId'].invalid }"></ng-select>
                     <div class="invalid-feedback">Please select an academic year to</div>
                 </div>
             </div>
