--- a/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
+++ b/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
@@ -11,7 +11,7 @@
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
                             <button (click)="addModal(content)" [disabled]="selectedEnrollments.length < 1" title="Enroll selected students" class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" ><i class="ri-swap-box-line align-bottom me-1"></i> Enroll</button>
-                            <button (click)="addModal(coursesContent)" [disabled]="selectedEnrollments.length < 1"  class="btn btn-secondary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" ><i class="ri-stack-line align-bottom me-1"></i> Courses</button>
+                            <!-- <button (click)="addModal(coursesContent)" [disabled]="selectedEnrollments.length < 1"  class="btn btn-secondary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" ><i class="ri-stack-line align-bottom me-1"></i> Courses</button> -->
                             <button (click)="addModal(subjectsContent)" [disabled]="selectedEnrollments.length < 1"  class="btn btn-info add-btn" data-bs-toggle="modal" data-bs-target="#showModal" ><i class="ri-book-line align-bottom me-1"></i> Subjects</button>
                             <button (click)="onDeleteSubmit()" [disabled]="selectedEnrollments.length < 1" title="Deleted selected enrollments"  class="btn btn-danger add-btn" data-bs-toggle="modal" data-bs-target="#showModal" ><i class="ri-delete-bin-line align-bottom me-1"></i> Delete</button>
                         </div>
@@ -78,25 +78,22 @@
         </div>
         <form  class="tablelist-form" autocomplete="off" [formGroup]="studentEnrollmentCreateForm" (ngSubmit)="onCreateSubmit()">
             <div class="modal-body">
-                <div class="mb-3">
+                <div class="row g-3">
+                <div class="col-lg-6">
                     <label class="form-label">Class <span class="text-danger">*</span></label>
-                    <ng-select [items]="classes" bindLabel="name" id="class" bindValue="id" formControlName="classId" placeholder="Select Class" [ngClass]="{ 'is-invalid': submitted && fStudentEnrollmentCreateForm['classId'].invalid }"></ng-select>
+                    <ng-select [items]="activeYearClasses" bindLabel="name" id="class" bindValue="id" formControlName="classId" placeholder="Select Class" [ngClass]="{ 'is-invalid': submitted && fStudentEnrollmentCreateForm['classId'].invalid }"></ng-select>
                     <div class="invalid-feedback">Please select a class</div>
                 </div>
-                <div class="mb-3">
+                <div class="col-lg-6">
                     <label class="form-label">Class Section</label>
-                    <ng-select [items]="classSections" bindLabel="name" id="classSections" bindValue="id" formControlName="classSectionId" placeholder="Select Class Section"></ng-select>
+                    <ng-select [items]="activeYearClassSections" bindLabel="name" id="classSections" bindValue="id" formControlName="classSectionId" placeholder="Select Class Section"></ng-select>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label">Academic Year <span class="text-danger">*</span></label>
-                    <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" formControlName="academicYearId" placeholder="Select Academic Year" [ngClass]="{ 'is-invalid': submitted && fStudentEnrollmentCreateForm['academicYearId'].invalid }"></ng-select>
-                    <div class="invalid-feedback">Please select an academic term</div>
                 </div>
             </div>
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-close-line align-bottom me-1"></i> Close</button>
+                    <button type="submit" class="btn btn-primary"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
                 </div>
             </div>
         </form>
@@ -123,8 +120,8 @@
                             </div>
                             <div class="modal-footer">
                                 <div class="hstack gap-2 justify-content-end">
-                                    <button (click)="onCreateStudentSubjects()" class="btn btn-primary">Add Subjects</button>
-                                    <button (click)=" onDeleteStudentSubjects()" class="btn btn-danger">Delete Subjects</button>
+                                    <button (click)="onCreateStudentSubjects()" class="btn btn-primary"><i class="ri-add-line align-bottom me-1"></i> Add Subjects</button>
+                                    <button (click)=" onDeleteStudentSubjects()" class="btn btn-danger"><i class="ri-delete-bin-line align-bottom me-1"></i> Delete Subjects</button>
                                 </div>
                             </div>
                         </form>
@@ -142,7 +139,7 @@
         </div>
     </ng-template>
 
-    <ng-template #coursesContent role="document" let-modal>
+    <!-- <ng-template #coursesContent role="document" let-modal>
         <div class="modal-header p-3 bg-light">
             <h5 class="modal-title" id="modalLabel">Manage Courses</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
@@ -162,7 +159,7 @@
                 </div>
             </div>
         </form>
-    </ng-template>
+    </ng-template> -->
 
     <ng-template #studentInfo role="document" let-modal>
         <div class="modal-header p-3 bg-light">
@@ -172,9 +169,9 @@
         <div class="col-xxl-12">
             <form>
                 <div class="modal-body">
-                    <ul ngbNav #Justify="ngbNav" [activeId]="1" class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
+                    <!-- <ul ngbNav #Justify="ngbNav" [activeId]="1" class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
                         <li [ngbNavItem]="1"><a ngbNavLink><span class="d-sm-block">Subjects</span></a>
-                            <ng-template ngbNavContent>
+                            <ng-template ngbNavContent> -->
                                     <div class="mb-3">
                                         <ng-select [ngModelOptions]="{standalone: true}" [items]="subjects" bindLabel="name" multiple="true" [(ngModel)]="selectedStudentSelectedSubjects" bindValue="id" placeholder="Select Subjects"></ng-select>
                                     </div>
@@ -189,7 +186,7 @@
                                         (deleteClicked)="onSelectedStudentDeleteClick($event)">
                                     </generic-app-table>
                                     </div>
-                            </ng-template>
+                            <!-- </ng-template>
                         </li>
                         <li [ngbNavItem]="2"><a ngbNavLink><span class="d-sm-block">Course</span></a>
                             <ng-template ngbNavContent>
@@ -198,13 +195,13 @@
                     </ul>
                     <div class="tab-content  text-muted">
                         <div [ngbNavOutlet]="Justify"></div>
-                    </div>
+                    </div> -->
                 </div>
             </form>
         <div class="modal-footer">
             <div class="hstack gap-2 justify-content-end">
                 <button [disabled]="selectedStudentSelectedSubjects.length < 1" (click)="onSelectedStudentSaveClick()" class="btn btn-primary px-3"><i class=" ri-save-2-line align-bottom me-1"></i> Save</button>
-                <button [disabled]="selectedStudentSubjects.length < 1" (click)="onPrint()" class="btn btn-info px-3"><i class="ri-printer-line align-bottom me-1"></i> Print Subjects</button>
+                <button [disabled]="selectedStudentSubjects.length < 1" (click)="onPrint()" class="btn btn-info px-3"><i class="ri-printer-line align-bottom me-1"></i> Print</button>
             </div>
         </div>
      </div>
