--- a/src/app/pages/school/students/student-registration/student-registration.component.html
+++ b/src/app/pages/school/students/student-registration/student-registration.component.html
@@ -135,7 +135,7 @@
                             <ng-template ngbNavContent>
                                 <form autocomplete="off" class="tablelist-form" [formGroup]="enrollmentForm">
                                     <div class="row g-3">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-12">
                                             <label class="form-label">Auto Enroll <span class="text-danger">*</span></label>
                                             <select class="form-select" aria-label=".form-select-sm" formControlName="autoEnroll" [ngClass]="{ 'is-invalid': submitted && fEnrollment['autoEnroll'].invalid }">
                                                 <option selected [ngValue]="null">Select Option</option>
@@ -143,11 +143,6 @@
                                                 <option [ngValue]="false">No</option>
                                             </select>
                                             <div class="invalid-feedback" *ngIf="submitted && fEnrollment['autoEnroll'].invalid">Please select an option</div>
-                                        </div>
-                                        <div class="col-lg-6">
-                                            <label class="form-label">Academic Year</label>
-                                            <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" formControlName="academicYearId" placeholder="Select Academic Year" [ngClass]="{ 'is-invalid': submitted && fEnrollment['academicYearId'].invalid }"></ng-select>
-                                            <div class="invalid-feedback">Please select an academic term</div>
                                         </div>
                                         <div class="col-lg-6">
                                             <label class="form-label">Class</label>
@@ -183,20 +178,15 @@
         </div>
         <form autocomplete="off" class="tablelist-form" [formGroup]="enrollmentForm" (submit)="enrollSelectedStudents()">
             <div class="modal-body">
-                <div class="mb-0">
-                    <div class="mb-3">
+                <div class="row g-3">
+                    <div class="col-lg-6">
                         <label class="form-label">Class <span class="text-danger">*</span></label>
                         <ng-select [items]="classes" bindLabel="name" id="class" bindValue="id" formControlName="classId" placeholder="Select Class" [ngClass]="{ 'is-invalid': submitted && fEnrollment['classId'].invalid }"></ng-select>
                         <div class="invalid-feedback">Please select a class</div>
                     </div>
-                    <div class="mb-3">
+                    <div class="col-lg-6">
                         <label class="form-label">Class Section</label>
                         <ng-select [items]="classSections" bindLabel="name" id="classSections" bindValue="id" formControlName="classSectionId" placeholder="Select Class Section"></ng-select>
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Academic Year <span class="text-danger">*</span></label>
-                        <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" formControlName="academicYearId" placeholder="Select Academic Year" [ngClass]="{ 'is-invalid': submitted && fEnrollment['academicYearId'].invalid }"></ng-select>
-                        <div class="invalid-feedback">Please select an academic term</div>
                     </div>
                 </div>
             </div>
